tests/invalid/import_from_inside_finally/main.py
def main() -> None:
    try:
        x: int = 1
    finally:
        from imports import module_a
